# equation_solver

./: CMakeLists.txt  README.md  calculations.cpp  equation.cpp  input_output.cpp  input_output.h  main.cpp
src/: CMakeLists.txt  calculations.cpp  calculations.h  equation.cpp  equation.h  extremum.cpp  extremum.h  input_output.cpp  input_output.h  main.cpp
